--- a/BFS/main.dSYM/Contents/Resources/Relocations/aarch64/main.yml
+++ b/BFS/main.dSYM/Contents/Resources/Relocations/aarch64/main.yml
@@ -2,47 +2,47 @@
 triple:          'arm64-apple-darwin'
 binary-path:     '/Users/aayush/Desktop/Projects/puzzle-uninformed-search/BFS/main'
 relocations:
-  - { offset: 0x2FB8, size: 0x8, addend: 0x0, symName: __ZNSt3__124__put_character_sequenceB8ne180100IcNS_11char_traitsIcEEEERNS_13basic_ostreamIT_T0_EES7_PKS4_m, symObjAddr: 0x114, symBinAddr: 0x1000032D8, symSize: 0x1EC }
-  - { offset: 0x3E28, size: 0x8, addend: 0x0, symName: __ZNSt3__1lsB8ne180100INS_11char_traitsIcEEEERNS_13basic_ostreamIcT_EES6_PKc, symObjAddr: 0x48, symBinAddr: 0x10000320C, symSize: 0x48 }
-  - { offset: 0x3E6E, size: 0x8, addend: 0x0, symName: __ZNSt3__14endlB8ne180100IcNS_11char_traitsIcEEEERNS_13basic_ostreamIT_T0_EES7_, symObjAddr: 0xBC, symBinAddr: 0x100003280, symSize: 0x58 }
-  - { offset: 0x3EAE, size: 0x8, addend: 0x0, symName: __ZNSt3__116__pad_and_outputB8ne180100IcNS_11char_traitsIcEEEENS_19ostreambuf_iteratorIT_T0_EES6_PKS4_S8_S8_RNS_8ios_baseES4_, symObjAddr: 0x350, symBinAddr: 0x100003514, symSize: 0x240 }
-  - { offset: 0x3F7D, size: 0x8, addend: 0x0, symName: __ZNSt3__112__to_addressB8ne180100IKcEEPT_S3_, symObjAddr: 0x8C8, symBinAddr: 0x100003A8C, symSize: 0x14 }
-  - { offset: 0x3FE5, size: 0x8, addend: 0x0, symName: __ZNSt3__19use_facetB8ne180100INS_5ctypeIcEEEERKT_RKNS_6localeE, symObjAddr: 0xB48, symBinAddr: 0x100003D0C, symSize: 0x2C }
-  - { offset: 0x44B2, size: 0x8, addend: 0x0, symName: __ZNSt3__118__constexpr_strlenB8ne180100EPKc, symObjAddr: 0xBE0, symBinAddr: 0x100003DA4, symSize: 0x24 }
-  - { offset: 0x5471, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x1000031C4, symSize: 0x48 }
-  - { offset: 0x548A, size: 0x8, addend: 0x0, symName: __ZNSt3__113basic_ostreamIcNS_11char_traitsIcEEElsB8ne180100EPFRS3_S4_E, symObjAddr: 0x90, symBinAddr: 0x100003254, symSize: 0x2C }
-  - { offset: 0x54BC, size: 0x8, addend: 0x0, symName: __ZNSt3__111char_traitsIcE6lengthB8ne180100EPKc, symObjAddr: 0x300, symBinAddr: 0x1000034C4, symSize: 0x34 }
-  - { offset: 0x54FC, size: 0x8, addend: 0x0, symName: __ZNKSt3__113basic_ostreamIcNS_11char_traitsIcEEE6sentrycvbB8ne180100Ev, symObjAddr: 0x334, symBinAddr: 0x1000034F8, symSize: 0x1C }
-  - { offset: 0x5520, size: 0x8, addend: 0x0, symName: __ZNSt3__119ostreambuf_iteratorIcNS_11char_traitsIcEEEC1B8ne180100ERNS_13basic_ostreamIcS2_EE, symObjAddr: 0x590, symBinAddr: 0x100003754, symSize: 0x34 }
-  - { offset: 0x5556, size: 0x8, addend: 0x0, symName: __ZNKSt3__18ios_base5flagsB8ne180100Ev, symObjAddr: 0x5C4, symBinAddr: 0x100003788, symSize: 0x18 }
-  - { offset: 0x557C, size: 0x8, addend: 0x0, symName: __ZNKSt3__19basic_iosIcNS_11char_traitsIcEEE4fillB8ne180100Ev, symObjAddr: 0x5DC, symBinAddr: 0x1000037A0, symSize: 0x64 }
-  - { offset: 0x55A2, size: 0x8, addend: 0x0, symName: __ZNKSt3__119ostreambuf_iteratorIcNS_11char_traitsIcEEE6failedB8ne180100Ev, symObjAddr: 0x640, symBinAddr: 0x100003804, symSize: 0x24 }
-  - { offset: 0x55C6, size: 0x8, addend: 0x0, symName: __ZNSt3__19basic_iosIcNS_11char_traitsIcEEE8setstateB8ne180100Ej, symObjAddr: 0x664, symBinAddr: 0x100003828, symSize: 0x2C }
-  - { offset: 0x55F9, size: 0x8, addend: 0x0, symName: __ZNKSt3__18ios_base5widthB8ne180100Ev, symObjAddr: 0x6A0, symBinAddr: 0x100003864, symSize: 0x18 }
-  - { offset: 0x561F, size: 0x8, addend: 0x0, symName: __ZNSt3__115basic_streambufIcNS_11char_traitsIcEEE5sputnB8ne180100EPKcl, symObjAddr: 0x6B8, symBinAddr: 0x10000387C, symSize: 0x3C }
-  - { offset: 0x565F, size: 0x8, addend: 0x0, symName: __ZNSt3__112basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEEC1B8ne180100Emc, symObjAddr: 0x6F4, symBinAddr: 0x1000038B8, symSize: 0x3C }
-  - { offset: 0x56A5, size: 0x8, addend: 0x0, symName: __ZNKSt3__112basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEE4dataB8ne180100Ev, symObjAddr: 0x730, symBinAddr: 0x1000038F4, symSize: 0x28 }
-  - { offset: 0x56C9, size: 0x8, addend: 0x0, symName: __ZNSt3__18ios_base5widthB8ne180100El, symObjAddr: 0x758, symBinAddr: 0x10000391C, symSize: 0x2C }
-  - { offset: 0x570D, size: 0x8, addend: 0x0, symName: __ZNSt3__112basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEEC2B8ne180100Emc, symObjAddr: 0x784, symBinAddr: 0x100003948, symSize: 0x4C }
-  - { offset: 0x5758, size: 0x8, addend: 0x0, symName: __ZNSt3__117__compressed_pairINS_12basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEE5__repES5_EC1B8ne180100INS_18__default_init_tagESA_EEOT_OT0_, symObjAddr: 0x7D0, symBinAddr: 0x100003994, symSize: 0x3C }
-  - { offset: 0x57AE, size: 0x8, addend: 0x0, symName: __ZNSt3__117__compressed_pairINS_12basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEE5__repES5_EC2B8ne180100INS_18__default_init_tagESA_EEOT_OT0_, symObjAddr: 0x80C, symBinAddr: 0x1000039D0, symSize: 0x3C }
-  - { offset: 0x5804, size: 0x8, addend: 0x0, symName: __ZNSt3__122__compressed_pair_elemINS_12basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEE5__repELi0ELb0EEC2B8ne180100ENS_18__default_init_tagE, symObjAddr: 0x848, symBinAddr: 0x100003A0C, symSize: 0x14 }
-  - { offset: 0x5836, size: 0x8, addend: 0x0, symName: __ZNSt3__122__compressed_pair_elemINS_9allocatorIcEELi1ELb1EEC2B8ne180100ENS_18__default_init_tagE, symObjAddr: 0x85C, symBinAddr: 0x100003A20, symSize: 0x2C }
-  - { offset: 0x5868, size: 0x8, addend: 0x0, symName: __ZNSt3__19allocatorIcEC2B8ne180100Ev, symObjAddr: 0x888, symBinAddr: 0x100003A4C, symSize: 0x2C }
-  - { offset: 0x5890, size: 0x8, addend: 0x0, symName: __ZNSt3__116__non_trivial_ifILb1ENS_9allocatorIcEEEC2B8ne180100Ev, symObjAddr: 0x8B4, symBinAddr: 0x100003A78, symSize: 0x14 }
-  - { offset: 0x58B8, size: 0x8, addend: 0x0, symName: __ZNKSt3__112basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEE13__get_pointerB8ne180100Ev, symObjAddr: 0x8DC, symBinAddr: 0x100003AA0, symSize: 0x54 }
-  - { offset: 0x58DC, size: 0x8, addend: 0x0, symName: __ZNKSt3__112basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEE9__is_longB8ne180100Ev, symObjAddr: 0x930, symBinAddr: 0x100003AF4, symSize: 0x38 }
-  - { offset: 0x5900, size: 0x8, addend: 0x0, symName: __ZNKSt3__112basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEE18__get_long_pointerB8ne180100Ev, symObjAddr: 0x968, symBinAddr: 0x100003B2C, symSize: 0x28 }
-  - { offset: 0x5924, size: 0x8, addend: 0x0, symName: __ZNKSt3__112basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEE19__get_short_pointerB8ne180100Ev, symObjAddr: 0x990, symBinAddr: 0x100003B54, symSize: 0x28 }
-  - { offset: 0x5948, size: 0x8, addend: 0x0, symName: __ZNKSt3__117__compressed_pairINS_12basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEE5__repES5_E5firstB8ne180100Ev, symObjAddr: 0x9B8, symBinAddr: 0x100003B7C, symSize: 0x24 }
-  - { offset: 0x596C, size: 0x8, addend: 0x0, symName: __ZNKSt3__122__compressed_pair_elemINS_12basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEE5__repELi0ELb0EE5__getB8ne180100Ev, symObjAddr: 0x9DC, symBinAddr: 0x100003BA0, symSize: 0x14 }
-  - { offset: 0x5990, size: 0x8, addend: 0x0, symName: __ZNSt3__114pointer_traitsIPKcE10pointer_toB8ne180100ERS1_, symObjAddr: 0x9F0, symBinAddr: 0x100003BB4, symSize: 0x14 }
-  - { offset: 0x59B2, size: 0x8, addend: 0x0, symName: __ZNSt3__119ostreambuf_iteratorIcNS_11char_traitsIcEEEC2B8ne180100ERNS_13basic_ostreamIcS2_EE, symObjAddr: 0xA04, symBinAddr: 0x100003BC8, symSize: 0x54 }
-  - { offset: 0x59E8, size: 0x8, addend: 0x0, symName: __ZNKSt3__19basic_iosIcNS_11char_traitsIcEEE5rdbufB8ne180100Ev, symObjAddr: 0xA58, symBinAddr: 0x100003C1C, symSize: 0x24 }
-  - { offset: 0x5A0E, size: 0x8, addend: 0x0, symName: __ZNKSt3__18ios_base5rdbufB8ne180100Ev, symObjAddr: 0xA7C, symBinAddr: 0x100003C40, symSize: 0x18 }
-  - { offset: 0x5A32, size: 0x8, addend: 0x0, symName: __ZNSt3__111char_traitsIcE11eq_int_typeB8ne180100Eii, symObjAddr: 0xA94, symBinAddr: 0x100003C58, symSize: 0x28 }
-  - { offset: 0x5A64, size: 0x8, addend: 0x0, symName: __ZNSt3__111char_traitsIcE3eofB8ne180100Ev, symObjAddr: 0xABC, symBinAddr: 0x100003C80, symSize: 0x8 }
-  - { offset: 0x5A77, size: 0x8, addend: 0x0, symName: __ZNKSt3__19basic_iosIcNS_11char_traitsIcEEE5widenB8ne180100Ec, symObjAddr: 0xAC4, symBinAddr: 0x100003C88, symSize: 0x84 }
-  - { offset: 0x5AEE, size: 0x8, addend: 0x0, symName: __ZNKSt3__15ctypeIcE5widenB8ne180100Ec, symObjAddr: 0xB74, symBinAddr: 0x100003D38, symSize: 0x38 }
-  - { offset: 0x5B21, size: 0x8, addend: 0x0, symName: __ZNSt3__18ios_base8setstateB8ne180100Ej, symObjAddr: 0xBAC, symBinAddr: 0x100003D70, symSize: 0x34 }
+  - { offset: 0x2FB8, size: 0x8, addend: 0x0, symName: __ZNSt3__124__put_character_sequenceB8ne180100IcNS_11char_traitsIcEEEERNS_13basic_ostreamIT_T0_EES7_PKS4_m, symObjAddr: 0x13C, symBinAddr: 0x10000327C, symSize: 0x1EC }
+  - { offset: 0x3E28, size: 0x8, addend: 0x0, symName: __ZNSt3__1lsB8ne180100INS_11char_traitsIcEEEERNS_13basic_ostreamIcT_EES6_PKc, symObjAddr: 0x70, symBinAddr: 0x1000031B0, symSize: 0x48 }
+  - { offset: 0x3E6E, size: 0x8, addend: 0x0, symName: __ZNSt3__14endlB8ne180100IcNS_11char_traitsIcEEEERNS_13basic_ostreamIT_T0_EES7_, symObjAddr: 0xE4, symBinAddr: 0x100003224, symSize: 0x58 }
+  - { offset: 0x3EAE, size: 0x8, addend: 0x0, symName: __ZNSt3__116__pad_and_outputB8ne180100IcNS_11char_traitsIcEEEENS_19ostreambuf_iteratorIT_T0_EES6_PKS4_S8_S8_RNS_8ios_baseES4_, symObjAddr: 0x378, symBinAddr: 0x1000034B8, symSize: 0x240 }
+  - { offset: 0x3F7D, size: 0x8, addend: 0x0, symName: __ZNSt3__112__to_addressB8ne180100IKcEEPT_S3_, symObjAddr: 0x8F0, symBinAddr: 0x100003A30, symSize: 0x14 }
+  - { offset: 0x3FE5, size: 0x8, addend: 0x0, symName: __ZNSt3__19use_facetB8ne180100INS_5ctypeIcEEEERKT_RKNS_6localeE, symObjAddr: 0xB70, symBinAddr: 0x100003CB0, symSize: 0x2C }
+  - { offset: 0x44B2, size: 0x8, addend: 0x0, symName: __ZNSt3__118__constexpr_strlenB8ne180100EPKc, symObjAddr: 0xC08, symBinAddr: 0x100003D48, symSize: 0x24 }
+  - { offset: 0x5471, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x100003140, symSize: 0x70 }
+  - { offset: 0x548A, size: 0x8, addend: 0x0, symName: __ZNSt3__113basic_ostreamIcNS_11char_traitsIcEEElsB8ne180100EPFRS3_S4_E, symObjAddr: 0xB8, symBinAddr: 0x1000031F8, symSize: 0x2C }
+  - { offset: 0x54BC, size: 0x8, addend: 0x0, symName: __ZNSt3__111char_traitsIcE6lengthB8ne180100EPKc, symObjAddr: 0x328, symBinAddr: 0x100003468, symSize: 0x34 }
+  - { offset: 0x54FC, size: 0x8, addend: 0x0, symName: __ZNKSt3__113basic_ostreamIcNS_11char_traitsIcEEE6sentrycvbB8ne180100Ev, symObjAddr: 0x35C, symBinAddr: 0x10000349C, symSize: 0x1C }
+  - { offset: 0x5520, size: 0x8, addend: 0x0, symName: __ZNSt3__119ostreambuf_iteratorIcNS_11char_traitsIcEEEC1B8ne180100ERNS_13basic_ostreamIcS2_EE, symObjAddr: 0x5B8, symBinAddr: 0x1000036F8, symSize: 0x34 }
+  - { offset: 0x5556, size: 0x8, addend: 0x0, symName: __ZNKSt3__18ios_base5flagsB8ne180100Ev, symObjAddr: 0x5EC, symBinAddr: 0x10000372C, symSize: 0x18 }
+  - { offset: 0x557C, size: 0x8, addend: 0x0, symName: __ZNKSt3__19basic_iosIcNS_11char_traitsIcEEE4fillB8ne180100Ev, symObjAddr: 0x604, symBinAddr: 0x100003744, symSize: 0x64 }
+  - { offset: 0x55A2, size: 0x8, addend: 0x0, symName: __ZNKSt3__119ostreambuf_iteratorIcNS_11char_traitsIcEEE6failedB8ne180100Ev, symObjAddr: 0x668, symBinAddr: 0x1000037A8, symSize: 0x24 }
+  - { offset: 0x55C6, size: 0x8, addend: 0x0, symName: __ZNSt3__19basic_iosIcNS_11char_traitsIcEEE8setstateB8ne180100Ej, symObjAddr: 0x68C, symBinAddr: 0x1000037CC, symSize: 0x2C }
+  - { offset: 0x55F9, size: 0x8, addend: 0x0, symName: __ZNKSt3__18ios_base5widthB8ne180100Ev, symObjAddr: 0x6C8, symBinAddr: 0x100003808, symSize: 0x18 }
+  - { offset: 0x561F, size: 0x8, addend: 0x0, symName: __ZNSt3__115basic_streambufIcNS_11char_traitsIcEEE5sputnB8ne180100EPKcl, symObjAddr: 0x6E0, symBinAddr: 0x100003820, symSize: 0x3C }
+  - { offset: 0x565F, size: 0x8, addend: 0x0, symName: __ZNSt3__112basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEEC1B8ne180100Emc, symObjAddr: 0x71C, symBinAddr: 0x10000385C, symSize: 0x3C }
+  - { offset: 0x56A5, size: 0x8, addend: 0x0, symName: __ZNKSt3__112basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEE4dataB8ne180100Ev, symObjAddr: 0x758, symBinAddr: 0x100003898, symSize: 0x28 }
+  - { offset: 0x56C9, size: 0x8, addend: 0x0, symName: __ZNSt3__18ios_base5widthB8ne180100El, symObjAddr: 0x780, symBinAddr: 0x1000038C0, symSize: 0x2C }
+  - { offset: 0x570D, size: 0x8, addend: 0x0, symName: __ZNSt3__112basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEEC2B8ne180100Emc, symObjAddr: 0x7AC, symBinAddr: 0x1000038EC, symSize: 0x4C }
+  - { offset: 0x5758, size: 0x8, addend: 0x0, symName: __ZNSt3__117__compressed_pairINS_12basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEE5__repES5_EC1B8ne180100INS_18__default_init_tagESA_EEOT_OT0_, symObjAddr: 0x7F8, symBinAddr: 0x100003938, symSize: 0x3C }
+  - { offset: 0x57AE, size: 0x8, addend: 0x0, symName: __ZNSt3__117__compressed_pairINS_12basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEE5__repES5_EC2B8ne180100INS_18__default_init_tagESA_EEOT_OT0_, symObjAddr: 0x834, symBinAddr: 0x100003974, symSize: 0x3C }
+  - { offset: 0x5804, size: 0x8, addend: 0x0, symName: __ZNSt3__122__compressed_pair_elemINS_12basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEE5__repELi0ELb0EEC2B8ne180100ENS_18__default_init_tagE, symObjAddr: 0x870, symBinAddr: 0x1000039B0, symSize: 0x14 }
+  - { offset: 0x5836, size: 0x8, addend: 0x0, symName: __ZNSt3__122__compressed_pair_elemINS_9allocatorIcEELi1ELb1EEC2B8ne180100ENS_18__default_init_tagE, symObjAddr: 0x884, symBinAddr: 0x1000039C4, symSize: 0x2C }
+  - { offset: 0x5868, size: 0x8, addend: 0x0, symName: __ZNSt3__19allocatorIcEC2B8ne180100Ev, symObjAddr: 0x8B0, symBinAddr: 0x1000039F0, symSize: 0x2C }
+  - { offset: 0x5890, size: 0x8, addend: 0x0, symName: __ZNSt3__116__non_trivial_ifILb1ENS_9allocatorIcEEEC2B8ne180100Ev, symObjAddr: 0x8DC, symBinAddr: 0x100003A1C, symSize: 0x14 }
+  - { offset: 0x58B8, size: 0x8, addend: 0x0, symName: __ZNKSt3__112basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEE13__get_pointerB8ne180100Ev, symObjAddr: 0x904, symBinAddr: 0x100003A44, symSize: 0x54 }
+  - { offset: 0x58DC, size: 0x8, addend: 0x0, symName: __ZNKSt3__112basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEE9__is_longB8ne180100Ev, symObjAddr: 0x958, symBinAddr: 0x100003A98, symSize: 0x38 }
+  - { offset: 0x5900, size: 0x8, addend: 0x0, symName: __ZNKSt3__112basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEE18__get_long_pointerB8ne180100Ev, symObjAddr: 0x990, symBinAddr: 0x100003AD0, symSize: 0x28 }
+  - { offset: 0x5924, size: 0x8, addend: 0x0, symName: __ZNKSt3__112basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEE19__get_short_pointerB8ne180100Ev, symObjAddr: 0x9B8, symBinAddr: 0x100003AF8, symSize: 0x28 }
+  - { offset: 0x5948, size: 0x8, addend: 0x0, symName: __ZNKSt3__117__compressed_pairINS_12basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEE5__repES5_E5firstB8ne180100Ev, symObjAddr: 0x9E0, symBinAddr: 0x100003B20, symSize: 0x24 }
+  - { offset: 0x596C, size: 0x8, addend: 0x0, symName: __ZNKSt3__122__compressed_pair_elemINS_12basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEE5__repELi0ELb0EE5__getB8ne180100Ev, symObjAddr: 0xA04, symBinAddr: 0x100003B44, symSize: 0x14 }
+  - { offset: 0x5990, size: 0x8, addend: 0x0, symName: __ZNSt3__114pointer_traitsIPKcE10pointer_toB8ne180100ERS1_, symObjAddr: 0xA18, symBinAddr: 0x100003B58, symSize: 0x14 }
+  - { offset: 0x59B2, size: 0x8, addend: 0x0, symName: __ZNSt3__119ostreambuf_iteratorIcNS_11char_traitsIcEEEC2B8ne180100ERNS_13basic_ostreamIcS2_EE, symObjAddr: 0xA2C, symBinAddr: 0x100003B6C, symSize: 0x54 }
+  - { offset: 0x59E8, size: 0x8, addend: 0x0, symName: __ZNKSt3__19basic_iosIcNS_11char_traitsIcEEE5rdbufB8ne180100Ev, symObjAddr: 0xA80, symBinAddr: 0x100003BC0, symSize: 0x24 }
+  - { offset: 0x5A0E, size: 0x8, addend: 0x0, symName: __ZNKSt3__18ios_base5rdbufB8ne180100Ev, symObjAddr: 0xAA4, symBinAddr: 0x100003BE4, symSize: 0x18 }
+  - { offset: 0x5A32, size: 0x8, addend: 0x0, symName: __ZNSt3__111char_traitsIcE11eq_int_typeB8ne180100Eii, symObjAddr: 0xABC, symBinAddr: 0x100003BFC, symSize: 0x28 }
+  - { offset: 0x5A64, size: 0x8, addend: 0x0, symName: __ZNSt3__111char_traitsIcE3eofB8ne180100Ev, symObjAddr: 0xAE4, symBinAddr: 0x100003C24, symSize: 0x8 }
+  - { offset: 0x5A77, size: 0x8, addend: 0x0, symName: __ZNKSt3__19basic_iosIcNS_11char_traitsIcEEE5widenB8ne180100Ec, symObjAddr: 0xAEC, symBinAddr: 0x100003C2C, symSize: 0x84 }
+  - { offset: 0x5AEE, size: 0x8, addend: 0x0, symName: __ZNKSt3__15ctypeIcE5widenB8ne180100Ec, symObjAddr: 0xB9C, symBinAddr: 0x100003CDC, symSize: 0x38 }
+  - { offset: 0x5B21, size: 0x8, addend: 0x0, symName: __ZNSt3__18ios_base8setstateB8ne180100Ej, symObjAddr: 0xBD4, symBinAddr: 0x100003D14, symSize: 0x34 }
 ...
